--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,6 @@ steps:
     processName: 'Azure_Demo'
     folderName: 'Test'
     jobType: 'TestAutomation'
+    machine: 'DESKTOP-DKPHE2O'
     user: 'uipath\balamanikanta.krishn'
     
