--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,5 +23,10 @@ steps:
     processName: 'Azure_Demo'
     folderName: 'Test'
     user: 'uipath\balamanikanta.krishn'
-  
     
+    - task: UiPathPack@2
+      inputs:
+        versionType: 'CurrentVersion'
+        projectJsonPath: '$(Build.SourcesDirectory)'
+        orchestratorConnection: 'Uipath_Testing'
+        outputPath: '$(Build.ArtifactStagingDirectory)\Output'
