--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
 - task: UiPathDeploy@2
   inputs:
     orchestratorConnection: 'Uipath_Testing'
-    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
+    packagesPath: '$(System.DefaultWorkingDirectory)/_Balamanikanta1210.Azure_Example'
     folderName: 'Modren Example'
     entryPoints: 'Main.xaml'
 - task: UiPathTest@2
