--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,6 @@ steps:
 - task: UiPathDeploy@2
   inputs:
     orchestratorConnection: 'Uipath_Testing'
-    packagesPath: '$(System.DefaultWorkingDirectory)/_Balamanikanta1210.Azure_Example'
+    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
     folderName: 'Modren Example'
     entryPoints: 'Main.xaml'
