--- a/project.json
+++ b/project.json
@@ -3,18 +3,23 @@
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.ComputerVision.LocalServer": "[21.10.1]",
     "UiPath.Excel.Activities": "[2.11.3]",
     "UiPath.Mail.Activities": "[1.12.3]",
+    "UiPath.PDF.Activities": "[3.6.0]",
     "UiPath.System.Activities": "[21.10.0]",
-    "UiPath.UIAutomation.Activities": "[21.10.1]"
+    "UiPath.Terminal.Activities": "[2.4.0]",
+    "UiPath.UIAutomation.Activities": "[22.4.5]",
+    "UiPath.WebAPI.Activities": "[1.9.2]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.10.0.0",
-  "projectVersion": "1.0.4",
+  "projectVersion": "1.0.12",
   "runtimeOptions": {
     "autoDispose": false,
+    "netFrameworkLazyLoading": false,
     "isPausable": true,
     "isAttended": false,
     "requiresUserInteraction": true,
@@ -26,7 +31,7 @@
     "executionType": "Workflow",
     "readyForPiP": false,
     "startsInPiP": false,
-    "mustRestoreAllDependencies": true
+    "mustRestoreAllDependencies": false
   },
   "designOptions": {
     "projectProfile": "Developement",
@@ -39,13 +44,19 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true
+    "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
       "uniqueId": "4cfbf370-34e0-4791-82b3-657777d5228e",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "test.xaml",
+      "uniqueId": "7e406a97-9bcd-47c5-b7c6-ad49e308f332",
       "input": [],
       "output": []
     }
