"Converted into test case"

--- a/project.json
+++ b/project.json
@@ -43,7 +43,13 @@
     "processOptions": {
       "ignoredFiles": []
     },
-    "fileInfoCollection": [],
+    "fileInfoCollection": [
+      {
+        "editingStatus": "Publishable",
+        "testCaseId": "164f6dc1-bf1b-4173-9288-455507537bfe",
+        "fileName": "test.xaml"
+      }
+    ],
     "modernBehavior": false
   },
   "expressionLanguage": "VisualBasic",
