--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,12 +25,7 @@ steps:
 #    processName: 'Azure_Demo'
 #    folderName: 'Modren Example'
 #    user: 'uipath\balamanikanta.krishn'
-- task: UiPathAssets@2
-  inputs:
-    orchestratorConnection: 'UipathOrch'
-    folderName: 'Test'
-    assetActionType: 'Deploy'
-    csvFile: 'C:\agent\_work\2\s\test.csv'
+
 - task: UiPathPack@2
   inputs:
     versionType: 'AutoVersion'
@@ -38,7 +33,17 @@ steps:
     outputType: 'Process'
     outputPath: '$(Build.ArtifactStagingDirectory)\Output'
     orchestratorConnection: 'UipathOrch'
-
+- task: UiPathDeploy@2
+  inputs:
+    orchestratorConnection: 'UipathOrch'
+    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
+    folderName: 'Test'
+- task: UiPathAssets@2
+  inputs:
+    orchestratorConnection: 'UipathOrch'
+    folderName: 'Test'
+    assetActionType: 'Deploy'
+    csvFile: 'C:\agent\_work\2\s\test.csv'
 - task: UiPathTest@2
   inputs:
     testTarget: 'TestProject'
