Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,10 @@ steps:
 #    processName: 'Azure_Demo'
 #    folderName: 'Modren Example'
 #    user: 'uipath\balamanikanta.krishn'
-- task: UseDotNet@2
-  inputs:
-    packageType: 'sdk'
-    version: '6.0.7'
+#- task: UseDotNet@2
+#  inputs:
+#    packageType: 'sdk'
+#    version: '6.0.7'
 - task: UiPathInstallPlatform@4
   inputs:
     cliVersion: 'WIN_23.6.8581.19168'
