--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ steps:
 - task: UiPathInstallPlatform@4
   inputs:
     cliVersion: 'WIN_23.10.8894.39673'
-    cliNupkgPath: '$(System.ArtifactsDirectory)/UiPath.CLI.Windows.nupkg'
+    cliNupkgPath: '$(System.ArtifactsDirectory)\UiPath.CLI.Windows.nupkg'
 - task: UiPathPack@4
   inputs:
     versionType: 'AutoVersion'
