--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,16 +15,6 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
       
-#- task: UiPathRunJob@2
-#  inputs:
-#    orchestratorConnection: 'Uipath_Testing'
-#    processName: 'Azure_Demo'
-#    folderName: 'Modren Example'
-#    user: 'uipath\balamanikanta.krishn'
-#- task: UseDotNet@2
-#  inputs:
-#    packageType: 'sdk'
-#    version: '6.0.7'
 - task: DownloadPackage@1
   inputs:
     packageType: 'nuget'
@@ -32,50 +22,5 @@ steps:
     view: '745595e6-41f7-4661-ab14-6f538f640c92'
     definition: 'b5dc1268-9a57-4fbb-858d-2984fdf9846a'
     version: '23.4.8951.9936'
-    extract: false
+    extract: true
     downloadPath: '$(System.ArtifactsDirectory)'
-- task: UiPathInstallPlatform@4
-  inputs:
-    cliVersion: 'WIN_23.10.8894.39673'
-    cliNupkgPath: '$(System.ArtifactsDirectory)\UiPath.CLI.Windows.nupkg'
-- task: UiPathPack@4
-  inputs:
-    versionType: 'AutoVersion'
-    projectJsonPath: 'C:\Users\balamanikanta.krishn\Downloads\LIBRARY_CL_SendOutlookEmail\project.json'
-    outputType: 'Library'
-    orchestratorConnection: 'UipathOrch'
-    outputPath: '$(Build.ArtifactStagingDirectory)\Output'
-#- task: UiPathPack@4
-#  inputs:
-#    versionType: 'AutoVersion'
-#    projectJsonPath: 'C:\Users\balamanikanta.krishn\Downloads\LIBRARY_CL_SendOutlookEmail\project.json'
-#    outputType: 'Process'
-#    outputPath: '$(Build.ArtifactStagingDirectory)\Output'
-#    orchestratorConnection: 'UipathOrch'
-- task: UiPathDeploy@2
-  inputs:
-    orchestratorConnection: 'UipathOrch'
-    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
-    folderName: 'Test'
-- task: UiPathAssets@2
-  inputs:
-    orchestratorConnection: 'UipathOrch'
-    folderName: 'Test'
-    assetActionType: 'Deploy'
-    csvFile: 'C:\agent\_work\2\s\test.csv'
-- task: UiPathTest@2
-  inputs:
-    testTarget: 'TestProject'
-    orchestratorConnection: 'UipathOrch'
-    folderName: 'Test'
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-    ArtifactName: 'drop'
-    publishLocation: 'Container'
-#- task: UiPathDeploy@2
-#  inputs:
-#    orchestratorConnection: 'Uipath_Testing'
-#    packagesPath: '$(Build.ArtifactStagingDirectory)\Output'
-#    folderName: 'Test'
-#    entryPoints: 'Main.xaml'
