--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,4 +23,10 @@ steps:
     definition: 'b5dc1268-9a57-4fbb-858d-2984fdf9846a'
     version: '23.4.8951.9936'
     extract: true
-    downloadPath: '$(System.ArtifactsDirectory)'
+    downloadPath: '$(System.ArtifactsDirectory)\CLI'
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: |
+      # UiPath Pack Task
+      $(System.ArtifactsDirectory)\CLI\tools\uipcli.exe package pack $(Build.SourcesDirectory) -o $(Build.ArtifactStagingDirectory)\Output
