Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,4 +29,7 @@ steps:
     targetType: 'inline'
     script: |
       # UiPath Pack Task
-      $(System.ArtifactsDirectory)\CLI\tools\uipcli.exe package pack $(Build.SourcesDirectory) -o $(Build.ArtifactStagingDirectory)\Output
+      $cliPath = "$(System.ArtifactsDirectory)\CLI\tools\uipcli.exe"
+      Write-Host "##vso[task.setvariable variable=CLIPath]$cliPath"
+      echo $cliPath
+      $cliPath pack $(Build.SourcesDirectory) -o $(Build.ArtifactStagingDirectory)\Output
