--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,9 @@ steps:
   inputs:
     versionSpec: '20.x'
   displayName: 'Install Node.js'
+- task: UiPathInstallPlatform@5
+  inputs:
+    cliVersion: 'WIN_24.10.9050.17872'
 - task: DownloadPackage@1
   inputs:
     packageType: 'nuget'
