--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,10 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
       
-- task: NodeTaskRunnerInstaller@0
+- task: NodeTool@0
   inputs:
-    nodeVersion: '20'
+    versionSource: 'spec'
+    versionSpec: '20.x'
 - task: UiPathInstallPlatform@5
   inputs:
     cliVersion: 'WIN_24.10.9050.17872'
