Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,10 @@ steps:
   inputs:
     versionSource: 'spec'
     versionSpec: '20.x'
+- script: |
+    node -v  # Check the installed Node.js version
+    npm -v   # Check the installed npm version
+  displayName: 'Verify Node.js and npm'
 - task: UiPathInstallPlatform@5
   inputs:
     cliVersion: 'WIN_24.10.9050.17872'
